# rgb_cube

./: Cargo.toml  README.md
src/: main.rs
