[package]
name = "rgb_cube"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
strip = true
codegen-units = 1

[dependencies]
bevy = { version = "0.12", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.21"
bevy_flycam = "0.12"
itertools = "0.11.0"
